# AkaneCompanionLab

./: .env.example  .gitattributes  .gitignore  ASSETS_LICENSE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PUBLIC_RELEASE.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  akane_paths.py  config.py  launch_akane_memory_v01.py  pyproject.toml  requirements-ml.txt  requirements.txt  run_qq_workshop_self_check.ps1  run_quick_regression.ps1  start_akane.bat  start_akane_desktop_pet.ps1  start_akane_next.bat  start_akane_next.ps1  start_akane_preview.ps1  启动_Akane.bat  启动_Akane桌宠.bat  启动_Akane预览.bat
companion_v01/: __init__.py  app.py  attachment_inbox.py  attachment_ingest.py  background_tasks.py  browser_page_runtime.py  capability_approval.py  capability_registry.py  care_runtime.py  character_context_library.py  client_protocol.py  co_listen_store.py  desktop_context_engine.py  desktop_music_timeline.py  desktop_pet_character_resources.py  desktop_pet_contract.py  desktop_pet_engine.py  desktop_screen_vision.py  embedding_provider.py  engine.py  final_output_engine.py  generated_files.py  generated_files_cards.py  generated_files_delivery.py  generated_files_io.py  generated_files_media.py  gift_assets.py  gift_engine.py  huggingface_provider.py  llm_runtime.py  local_capability_catalog.py  local_capability_config.py  local_workflow_execution.py  mcp_stdio_discoverer.py  (+47 more)
desktop_pet_next/src-tauri/: Cargo.toml  tauri.conf.json
desktop_pet_next/src-tauri/capabilities/: default.json
desktop_pet_next/src-tauri/src/: main.rs
(+340 files in other folders)
